; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_mrb_dump_irep_binary.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_mrb_dump_irep_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MRB_DUMP_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@FLAG_BYTEORDER_NONATIVE = common dso_local global i32 0, align 4
@MRB_DUMP_OK = common dso_local global i32 0, align 4
@MRB_DUMP_WRITE_FAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrb_dump_irep_binary(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i64 0, i64* %11, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i32, i32* @MRB_DUMP_INVALID_ARGUMENT, align 4
  store i32 %16, i32* %5, align 4
  br label %42

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @FLAG_BYTEORDER_NONATIVE, align 4
  %22 = call i32 @dump_flags(i32 %20, i32 %21)
  %23 = call i32 @dump_irep(i32* %18, i32* %19, i32 %22, i32** %10, i64* %11)
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %12, align 4
  %25 = load i32, i32* @MRB_DUMP_OK, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %37

27:                                               ; preds = %17
  %28 = load i32*, i32** %10, align 8
  %29 = load i64, i64* %11, align 8
  %30 = load i32*, i32** %9, align 8
  %31 = call i64 @fwrite(i32* %28, i32 4, i64 %29, i32* %30)
  %32 = load i64, i64* %11, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %27
  %35 = load i32, i32* @MRB_DUMP_WRITE_FAULT, align 4
  store i32 %35, i32* %12, align 4
  br label %36

36:                                               ; preds = %34, %27
  br label %37

37:                                               ; preds = %36, %17
  %38 = load i32*, i32** %6, align 8
  %39 = load i32*, i32** %10, align 8
  %40 = call i32 @mrb_free(i32* %38, i32* %39)
  %41 = load i32, i32* %12, align 4
  store i32 %41, i32* %5, align 4
  br label %42

42:                                               ; preds = %37, %15
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i32 @dump_irep(i32*, i32*, i32, i32**, i64*) #1

declare dso_local i32 @dump_flags(i32, i32) #1

declare dso_local i64 @fwrite(i32*, i32, i64, i32*) #1

declare dso_local i32 @mrb_free(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
